fixed nav visibility

--- a/client/src/Components/navbar.module.scss
+++ b/client/src/Components/navbar.module.scss
@@ -77,7 +77,7 @@
    }
    nav {
       color: white;
-      text-shadow: 0px 0px 4px black;
+      text-shadow: 0 0 4px black;
       a {
          li hr {
             background-color: white;
