--- a/client/src/pages/index.module.scss
+++ b/client/src/pages/index.module.scss
@@ -9,10 +9,7 @@
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   // &::before {
-   div {
-      // content: '';
-      // animation: indexBackground 60s infinite;
+   .background {
       height: 100%;
       width: 100%;
       position: absolute;
@@ -22,7 +19,6 @@
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
-      // background-image: url('../IMG/Slideshow/1.jpg');
    }
 
    .bg1 {
@@ -53,13 +49,6 @@
       opacity: 0;
       animation: animateBG7 60s infinite;
    }
-
-   // &::after {
-   //    content: '';
-   //    z-index: -1;
-   //    opacity: 0;
-   //    animation: indexBackgroundLoader 60s;
-   // }
 
    header {
       position: relative;
@@ -225,67 +214,3 @@
       opacity: 1;
    }
 }
-
-// @keyframes indexBackground {
-//    0%,
-//    13% {
-//       background-image: url('../IMG/Slideshow/1.jpg');
-//    }
-//    16%,
-//    27% {
-//       background-image: url('../IMG/Slideshow/2.jpg');
-//    }
-//    30%,
-//    41% {
-//       background-image: url('../IMG/Slideshow/3.jpg');
-//    }
-//    44%,
-//    55% {
-//       background-image: url('../IMG/Slideshow/4.jpg');
-//    }
-//    58%,
-//    69% {
-//       background-image: url('../IMG/Slideshow/5.jpg');
-//    }
-//    72%,
-//    83% {
-//       background-image: url('../IMG/Slideshow/6.jpg');
-//    }
-//    86%,
-//    97% {
-//       background-image: url('../IMG/Slideshow/7.jpg');
-//    }
-//    100% {
-//       background-image: url('../IMG/Slideshow/1.jpg');
-//    }
-// }
-
-// @keyframes indexBackgroundLoader {
-//    0%,
-//    5% {
-//       background-image: none;
-//    }
-//    6%,
-//    19% {
-//       background-image: url('../IMG/Slideshow/2.jpg');
-//    }
-//    20%,
-//    33% {
-//       background-image: url('../IMG/Slideshow/3.jpg');
-//    }
-//    34%,
-//    47% {
-//       background-image: url('../IMG/Slideshow/4.jpg');
-//    }
-//    48%,
-//    61% {
-//       background-image: url('../IMG/Slideshow/5.jpg');
-//    }
-//    62%,
-//    75% {
-//       background-image: url('../IMG/Slideshow/6.jpg');
-//    }
-//    76% {
-//       background-image: url('../IMG/Slideshow/7.jpg');
-//    }
-// }
